--- a/project/src/Components/GameScreen.css
+++ b/project/src/Components/GameScreen.css
@@ -5,9 +5,8 @@ img {
   resizeMode: "cover";
 }
 .game-screen {
-
   width: 100%;
-  height: 700px;
+  height: 90vh;
 }
 .Left-box {
   display: flex;
