--- a/project/src/Components/Header.css
+++ b/project/src/Components/Header.css
@@ -2,6 +2,9 @@
     display: flex;
     background: black;
     width: 100%;
+    height: 10vh;
     color: white;
     padding-left: 20px;
+    display: flex;
+    justify-content: space-between;
 }
