--- a/project/src/Components/Header.css
+++ b/project/src/Components/Header.css
@@ -4,7 +4,11 @@
     width: 100%;
     height: 10vh;
     color: white;
-    padding-left: 20px;
     display: flex;
     justify-content: space-between;
+}
+
+#title{
+    color:white;
+    margin-left:20px;
 }
