--- a/project/src/Components/MainScreen.css
+++ b/project/src/Components/MainScreen.css
@@ -1,14 +1,42 @@
 #main-screen{
     width: 100%;
     height :90vh;
+    position: relative;
 }
 
 .main-background-img{
     width: 100%;
-    height : 100%;
+    height: 100%;
+    position: absolute;
+    left:0;
+    z-index: -1;
+    object-fit: cover;
 }
 
 .main-container {
-    width :70%;
+    width :80%;
     height: 100%;
+    margin: 0 auto;
+    background:rgba(0, 0, 0, 0.7);
+    color:white;
+}
+
+.main-content{
+    margin: 0 auto;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-user-name{
+    font-size: 50px;
+    padding-bottom: 20px;
+}
+
+.game-discription{
+    font-size:30px;
+    padding-bottom:30px;
 }
