--- a/project/src/Components/UserInform.css
+++ b/project/src/Components/UserInform.css
@@ -1,3 +1,11 @@
-.user-name{
-    width: 200px;
+.UserInform{
+    width: 300px;
+    height :100%;
+    padding-right:100px;
+    display:flex;
+    justify-content: right;
+}
+
+.header-user-name{
+    padding-right: 50px;
 }
