--- a/project/src/Components/EndScreen.css
+++ b/project/src/Components/EndScreen.css
@@ -1,10 +1,10 @@
-#main-screen{
+#end-screen{
     width: 100%;
     height :90vh;
     position: relative;
 }
 
-.main-background-img{
+.end-background-img{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -13,7 +13,7 @@
     object-fit: cover;
 }
 
-.main-container {
+.end-container {
     width :80%;
     height: 100%;
     margin: 0 auto;
@@ -21,9 +21,9 @@
     color:white;
 }
 
-.main-content{
+.end-content{
     margin: 0 auto;
-    width: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -31,12 +31,7 @@
     align-items: center;
 }
 
-.main-user-name{
-    font-size: 50px;
+.end-score{
+    font-size: 40px;
     padding-bottom: 20px;
-}
-
-.game-discription{
-    font-size:30px;
-    padding-bottom:30px;
 }
