--- a/project/src/Components/Header.css
+++ b/project/src/Components/Header.css
@@ -6,9 +6,11 @@
     color: white;
     display: flex;
     justify-content: space-between;
+    font-size: 1.1em;
 }
 
 #title{
     color:white;
     margin-left:20px;
 }
+
