--- a/project/src/Components/GameScreen.css
+++ b/project/src/Components/GameScreen.css
@@ -25,11 +25,19 @@ img {
   box-sizing: border-box;
   height: 100%;
 }
+.Hidden-box {
+  display: flex;
+  width: 0%;
+  float: right;
+  justify-content: center;
+  box-sizing: border-box;
+  height: 100%;
+}
 .img-thumbnail {
   position: relative;
   width:100%;
   height:100%;
-  top: -10%;
+  top: -5%;
   object-fit: contain;
   filter:brightness(70%);
   z-index: 0;
