--- a/project/src/Components/GameScreen.css
+++ b/project/src/Components/GameScreen.css
@@ -62,23 +62,24 @@
   color: #55ACEE;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.5vw;
+  font-size: 1.8vw ;
   font-weight: 600;
   line-height: normal;
   margin: 0;
   outline: none;
-  padding: 0.4vh 1vw;
+  padding: 0.8vh 2vw;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 10vw;
-  height: 8vh;
+  width: 11vw;
+  height: auto;
   will-change: transform;
   top: 60%;
-  margin-left: -15vw;
+  /* left: 65%; */
+  margin-left: -15.5vw;
   z-index: 1;
 }
 
@@ -108,24 +109,24 @@
   color: #95D03A;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.5vw;
+  font-size: 1.8vw ;
   font-weight: 600;
   line-height: normal;
   margin: 0;
   outline: none;
-  padding: 0.4vh 1vw;
+  padding: 0.8vh 2vw;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 10vw;
-  height: 8vh;
+  width: 11vw;
+  height: auto;
   will-change: transform;
   top: 60%;
   /* left: 65%; */
-  margin-left: 15vw;
+  margin-left: 10.5vw;
   z-index: 1;
 }
 
