rule discription is added

--- a/project/src/Components/MainScreen.css
+++ b/project/src/Components/MainScreen.css
@@ -44,6 +44,12 @@
     font-weight: 550;
 }
 
+.rule-discription{
+  position: absolute;
+  top: 70%;
+  font-size:2vw;
+}
+
 .link {
     color:#FFF;
     text-decoration: none;
