--- a/project/src/Components/ResultButton.css
+++ b/project/src/Components/ResultButton.css
@@ -7,4 +7,8 @@
     left: 50%;
     z-index: 1;
     transform: translate(-50%, 0);
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
